# aps-ai-road-design-check

./: .dockerignore  .env.example  .gitignore  DOKKU_DEPLOY.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
Controllers/: AuthController.py  HubsController.py  JsonController.py  OpenAIController.py  OpenAISkillController.py
assets/: Highway-Design-Standards.json  Intro-1.dwg
assets/design-standard-checker/: SKILL.md
assets/design-standard-checker/agents/: openai.yaml
assets/design-standard-checker/references/: comparison-rubric.md  output-schema.md  retrieval-contract.md
static/: AlignmentCheckExtension.js  AlignmentCheckExtensionAI.js  AlignmentCheckExtensionJSON.js  AlignmentCheckExtensionSkill.js  design-standards.js  main.css  main.js  sidebar.js  viewer.js
templates/: index.html
