[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aps-road-design-check"
version = "0.1.0"
description = "A Python Flask web application for road design checking"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "João Martins", email = "joao.martins@autodesk.com"}
]
dependencies = [
    "Flask==3.0.0",
    "python-dotenv>=1.0.0",
    "requests==2.31.0",
    "openai==2.0.0",
    "PyPDF2>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Controllers*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
